# client_server_converterXMLtxt

./: CMakeLists.txt  README.md
include/: client.h  converter.h  header.h  server.h
src/: CMakeLists.txt  Client_main.cpp  client.cpp  converter.cpp  main.cpp  server.cpp
test/: CMakeLists.txt  client_test.cpp  converter_test.cpp  server_test.cpp
